# google-workspace-posture

./: .gitignore  LICENSE.txt  README.md  env.tmpl  pyproject.toml
google_workspace_posture/: check.py  config.py  main.py
google_workspace_posture/checks/: accounts.py  prevent_password_reuse_with_password_alert.py  require_2_step_verification_for_users.py
google_workspace_posture/services/: admin_directory.py  admin_directory_ou.py  admin_directory_reports.py  admin_directory_users.py  admin_reports.py  alertcenter_beta_alerts.py  chrome_policy.py  service.py
tests/: test_check.py
tests/checks/: test_accounts.py
tests/services/: test_service.py
